--- a/controllers/provider-azure/charts/internal/cloud-provider-config/values.yaml
+++ b/controllers/provider-azure/charts/internal/cloud-provider-config/values.yaml
@@ -9,4 +9,5 @@ availabilitySetName: av-set
 subnetName: sname
 routeTableName: rtname
 securityGroupName: sgname
+loadBalancerSku: standard
 region: location
